# nrt_efa_comms_repro

./: Cargo.toml  README.md  rust_hlo_run_rank_0.pb  start_efa_instances.sh
xla/: Cargo.toml  build.rs
xla/src/: hlo.proto  lib.rs  trn.rs  xla_data.proto  xla_runner.rs  xla_utils.rs
